Fix spacing between elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,8 @@ a {
 
 /* ======== Clients ======== */
 .clients {
-    margin-top: 122px;
+    margin-top: 79px;
+    padding: 43px 0 64px;
 }
 
 .clients .row {
@@ -169,7 +170,8 @@ a {
 
 /* ======== Guides ======== */
 .guides {
-    margin-top: 200px;
+    margin-top: 40px;
+    padding: 93px 0 79px;
 }
 
 .guides .sub-title {
@@ -248,7 +250,7 @@ a {
 
 /* ======== Featured ======== */
 .featured {
-    margin-top: 120px;
+    margin-top: 41px;
     padding: 110px 0;
     background: #f5fafe;
 }
